# pyWhat

./: .codecov.yml  .coveragerc  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  conftest.py  data.json  demo.cast  file_signatures.yaml  main.go  noxfile.py  pcap.demo  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yaml
Data/: file_signatures.yaml  regex.yaml
PyWhat/: __main__.py  identifier.py  languageDetector.py  magic_numbers.py  nameThatHash.py  printer.py  regex_identifier.py  what.py
PyWhat/Data/: file_signatures.json  regex.json
What/: __main__.py  data.json  data.toml  data.yaml  file_signatures.yaml  identifier.py  languageDetector.py  magic_numbers.py  magic_numers.py  nameThatHash.py  printer.py  regex_identifier.py  what.py
fixtures/: FollowTheLeader.pcap  file
fixtures/test/: file
images_for_README/: demo.cast  wireshark.cast
pywhat/: __init__.py  __main__.py  distribution.py  filter.py  helper.py  identifier.py  magic_numbers.py  printer.py  regex_identifier.py  script.py  what.py  what_call.py  william_unittest.py
pywhat/Data/: mac_vendors.json  mastercard_companies.json  phone_codes.json  regex.json  tld_list.txt  turned_off.json
pywhat/filtration_distribution/: distribution.py  filter.py
scripts/: README.md  format_regex.py  get_file_sigs.py  get_tlds.py  test_boundary_removal.py  tmp.py
tests/: test_click.py  test_distribution.py  test_filtration.py  test_identifier.py  test_language_identifier.py  test_regex_database.py  test_regex_formating.py  test_regex_formatting.py  test_regex_identifier.py
tests/data/: test_regex.py
unittest/: william_unittests.py
