[tool.poetry]
name = "pywhat"
version = "3.4.0"
description = "What is that thing?"
authors = ["Bee <github@skerritt.blog>"]
license = "GPL-3.0-or-later"
documentation = "https://github.com/bee-san/pyWhat/wiki"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
rich = ">=9.9,<11.0"
orjson = {version = "^3.6.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = {version = "^21.6b0", python = "^3.6.2"} 
isort = {version = "^5.9.2", python = "^3.6.1"}
flake8 = "3.8.4"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pywhat = "pywhat.what:main"
what = "pywhat.what:main"
