[tool.poetry]
name = "pywhat"
version = "4.1.0"
description = "What is that thing?"
authors = ["Bee <github@skerritt.blog>"]
license = "MIT"
documentation = "https://github.com/bee-san/pyWhat/wiki"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
rich = ">=9.9,<11.0"
orjson = {version = "^3.6.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = {version = "^21.6b0", python = "^3.6.2"} 
isort = {version = "^5.9.2", python = "^3.6.1"}
flake8 = "3.8.4"
requests = "^2.26.0"
pytest-black = "^0.3.12"
pytest-isort = "^2.0.0"

[tool.poetry.extras]
optimize = ["orjson"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pywhat = "pywhat.what:main"
what = "pywhat.what:main"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
addopts = "--black --isort"